website/versioned_docs/version-4.1/type_mapping.md
---
id: version-4.1-type_mapping
title: Type mapping
sidebar_label: Type mapping
original_id: type_mapping
---

As explained in the [queries](queries.md) section, the job of GraphQLite is to create GraphQL types from PHP types.

## Scalar mapping

Scalar PHP types can be type-hinted to the corresponding GraphQL types:

* `string`
* `int`
* `bool`
* `float`

For instance:

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
namespace App\Controller;

use TheCodingMachine\GraphQLite\Annotations\Query;

class MyController
{
    #[Query]
    public function hello(string $name): string
    {
        return 'Hello ' . $name;
    }
}
```
<!--PHP 7+-->
```php
namespace App\Controller;

use TheCodingMachine\GraphQLite\Annotations\Query;

class MyController
{
    /**
     * @Query
     */
    public function hello(string $name): string
    {
        return 'Hello ' . $name;
    }
}
```
<!--END_DOCUSAURUS_CODE_TABS-->

## Class mapping

When returning a PHP class in a query, you must annotate this class using `@Type` and `@Field` annotations:

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
namespace App\Entities;

use TheCodingMachine\GraphQLite\Annotations\Field;
use TheCodingMachine\GraphQLite\Annotations\Type;

#[Type]
class Product
{
    // ...

    #[Field]
    public function getName(): string
    {
        return $this->name;
    }

    #[Field]
    public function getPrice(): ?float
    {
        return $this->price;
    }
}
```
<!--PHP 7+-->
```php
namespace App\Entities;

use TheCodingMachine\GraphQLite\Annotations\Field;
use TheCodingMachine\GraphQLite\Annotations\Type;

/**
 * @Type()
 */
class Product
{
    // ...

    /**
     * @Field()
     */
    public function getName(): string
    {
        return $this->name;
    }

    /**
     * @Field()
     */
    public function getPrice(): ?float
    {
        return $this->price;
    }
}
```
<!--END_DOCUSAURUS_CODE_TABS-->

**Note:** The GraphQL output type name generated by GraphQLite is equal to the class name of the PHP class. So if your
PHP class is `App\Entities\Product`, then the GraphQL type will be named "Product".

In case you have several types with the same class name in different namespaces, you will face a naming collision. 
Hopefully, you can force the name of the GraphQL output type using the "name" attribute:

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
#[Type(name: "MyProduct")]
class Product { /* ... */ }
```
<!--PHP 7+-->
```php
/**
 * @Type(name="MyProduct")
 */
class Product { /* ... */ }
```
<!--END_DOCUSAURUS_CODE_TABS-->

<div class="alert alert-info">You can also put a <a href="inheritance-interfaces#mapping-interfaces"><code>@Type</code> annotation on a PHP interface
to map your code to a GraphQL interface</a>.</div>

## Array mapping

You can type-hint against arrays (or iterators) as long as you add a detailed `@return` statement in the PHPDoc.

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
/**
 * @return User[] <=== we specify that the array is an array of User objects.
 */
#[Query]
public function users(int $limit, int $offset): array
{
    // Some code that returns an array of "users".
}
```
<!--PHP 7+-->
```php
/**
 * @Query
 * @return User[] <=== we specify that the array is an array of User objects.
 */
public function users(int $limit, int $offset): array
{
    // Some code that returns an array of "users".
}
```
<!--END_DOCUSAURUS_CODE_TABS-->

## ID mapping

GraphQL comes with a native `ID` type. PHP has no such type.

There are two ways with GraphQLite to handle such type.

### Force the outputType

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
#[Field(outputType: "ID")]
public function getId(): string
{
    // ...
}
```
<!--PHP 7+-->
```php
/**
 * @Field(outputType="ID")
 */
public function getId(): string
{
    // ...
}
```
<!--END_DOCUSAURUS_CODE_TABS-->

Using the `outputType` attribute of the `@Field` annotation, you can force the output type to `ID`.

You can learn more about forcing output types in the [custom types section](custom_types.md).

### ID class

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
use TheCodingMachine\GraphQLite\Types\ID;

#[Field]
public function getId(): ID
{
    // ...
}
```
<!--PHP 7+-->
```php
use TheCodingMachine\GraphQLite\Types\ID;

/**
 * @Field
 */
public function getId(): ID
{
    // ...
}
```
<!--END_DOCUSAURUS_CODE_TABS-->

Note that you can also use the `ID` class as an input type:

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
use TheCodingMachine\GraphQLite\Types\ID;

#[Mutation]
public function save(ID $id, string $name): Product
{
    // ...
}
```
<!--PHP 7+-->
```php
use TheCodingMachine\GraphQLite\Types\ID;

/**
 * @Mutation
 */
public function save(ID $id, string $name): Product
{
    // ...
}
```
<!--END_DOCUSAURUS_CODE_TABS-->

## Date mapping

Out of the box, GraphQL does not have a `DateTime` type, but we took the liberty to add one, with sensible defaults.

When used as an output type, `DateTimeImmutable` or `DateTimeInterface` PHP classes are 
automatically mapped to this `DateTime` GraphQL type.

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
#[Field]
public function getDate(): \DateTimeInterface
{
    return $this->date;
}
```
<!--PHP 7+-->
```php
/**
 * @Field
 */
public function getDate(): \DateTimeInterface
{
    return $this->date;
}
```
<!--END_DOCUSAURUS_CODE_TABS-->

The `date` field will be of type `DateTime`. In the returned JSON response to a query, the date is formatted as a string
in the **ISO8601** format (aka ATOM format).

<div class="alert alert-error">
    PHP <code>DateTime</code> type is not supported.
</div>

## Union types

You can create a GraphQL union type *on the fly* using the pipe `|` operator in the PHPDoc:

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
/**
 * @return Company|Contact <== can return a company OR a contact.
 */
#[Query]
public function companyOrContact(int $id)
{
    // Some code that returns a company or a contact.
}
```
<!--PHP 7+-->
```php
/**
 * @Query
 * @return Company|Contact <== can return a company OR a contact.
 */
public function companyOrContact(int $id)
{
    // Some code that returns a company or a contact.
}
```
<!--END_DOCUSAURUS_CODE_TABS-->

## Enum types

<small>Available in GraphQLite 4.0+</small>

PHP has no native support for enum types. Hopefully, there are a number of PHP libraries that emulate enums in PHP.
The most commonly used library is [myclabs/php-enum](https://github.com/myclabs/php-enum) and GraphQLite comes with
native support for it.

You will first need to install [myclabs/php-enum](https://github.com/myclabs/php-enum):

```bash
$ composer require myclabs/php-enum
```

Now, any class extending the `MyCLabs\Enum\Enum` class will be mapped to a GraphQL enum:

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
use MyCLabs\Enum\Enum;

class StatusEnum extends Enum
{
    private const ON = 'on';
    private const OFF = 'off';
    private const PENDING = 'pending';
}
```

```php
/**
 * @return User[]
 */
#[Query]
public function users(StatusEnum $status): array
{
    if ($status == StatusEnum::ON()) {
        // Note that the "magic" ON() method returns an instance of the StatusEnum class.
        // Also, note that we are comparing this instance using "==" (using "===" would fail as we have 2 different instances here)
        // ...
    }
    // ...
}
```
<!--PHP 7+-->
```php
use MyCLabs\Enum\Enum;

class StatusEnum extends Enum
{
    private const ON = 'on';
    private const OFF = 'off';
    private const PENDING = 'pending';
}
```

```php
/**
 * @Query
 * @return User[]
 */
public function users(StatusEnum $status): array
{
    if ($status == StatusEnum::ON()) {
        // Note that the "magic" ON() method returns an instance of the StatusEnum class.
        // Also, note that we are comparing this instance using "==" (using "===" would fail as we have 2 different instances here)
        // ...
    }
    // ...
}
```
<!--END_DOCUSAURUS_CODE_TABS-->

```graphql
query users($status: StatusEnum!) {}
    users(status: $status) {
        id
    }
}
```

By default, the name of the GraphQL enum type will be the name of the class. If you have a naming conflict (two classes
that live in different namespaces with the same class name), you can solve it using the `@EnumType` annotation:

<!--DOCUSAURUS_CODE_TABS-->
<!--PHP 8+-->
```php
use TheCodingMachine\GraphQLite\Annotations\EnumType;

#[EnumType(name: "UserStatus")]
class StatusEnum extends Enum
{
    // ...
}
```
<!--PHP 7+-->
```php
use TheCodingMachine\GraphQLite\Annotations\EnumType;

/**
 * @EnumType(name="UserStatus")
 */
class StatusEnum extends Enum
{
    // ...
}
```
<!--END_DOCUSAURUS_CODE_TABS-->

<div class="alert alert-warning">GraphQLite must be able to find all the classes extending the "MyCLabs\Enum" class
in your project. By default, GraphQLite will look for "Enum" classes in the namespaces declared for the types. For this 
reason, <strong>your enum classes MUST be in one of the namespaces declared for the types in your GraphQLite 
configuration file.</strong></div>


<div class="alert alert-info">There are many enumeration library in PHP and you might be using another library.
If you want to add support for your own library, this is not extremely difficult to do. You need to register a custom
"RootTypeMapper" with GraphQLite. You can learn more about <em>type mappers</em> in the <a href="internals">"internals" documentation</a>
and <a href="https://github.com/thecodingmachine/graphqlite/blob/master/src/Mappers/Root/MyCLabsEnumTypeMapper.php">copy/paste and adapt the root type mapper used for myclabs/php-enum</a>.</div>

## Deprecation of fields

You can mark a field as deprecated in your GraphQL Schema by just annotating it with the `@deprecated` PHPDoc annotation.

```php
namespace App\Entities;

use TheCodingMachine\GraphQLite\Annotations\Field;
use TheCodingMachine\GraphQLite\Annotations\Type;

/**
 * @Type()
 */
class Product
{
    // ...

    /**
     * @Field()
     */
    public function getName(): string
    {
        return $this->name;
    }

    /**
     * @Field()
     * @deprecated use field `name` instead
     */
    public function getProductName(): string
    {
        return $this->name;
    }
}
```

This will add the `@deprecated` directive to the field in the GraphQL Schema which sets the `isDeprecated` field to `true` and adds the reason to the `deprecationReason` field in an introspection query. Fields marked as deprecated can still be queried, but will be returned in an introspection query only if `includeDeprecated` is set to `true`.

```graphql
query {
    __type(name: "Product") {
￼       fields(includeDeprecated: true) {
￼           name
￼           isDeprecated
￼           deprecationReason
￼       }
￼   }
}
```

## More scalar types

<small>Available in GraphQLite 4.0+</small>

GraphQL supports "custom" scalar types. GraphQLite supports adding more GraphQL scalar types.

If you need more types, you can check the [GraphQLite Misc. Types library](https://github.com/thecodingmachine/graphqlite-misc-types).
It adds support for more scalar types out of the box in GraphQLite.

Or if you have some special needs, [you can develop your own scalar types](custom-types#registering-a-custom-scalar-type-advanced).
